force-app/main/default/objects/Personal_Questionnaire__c/Personal_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Personal Questionnaire</label>
    <nameField>
        <label>Personal Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>