force-app/main/default/objects/Personal_Questionnaire__c/fields/Alimony_Amount__c.field-meta.xml
<CustomField>
    <fullName>Alimony_Amount__c</fullName>
    <label>Alimony Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>