force-app/main/default/objects/Personal_Questionnaire__c/fields/Annual_Income_from_1099__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_from_1099__c</fullName>
    <label>Self-Employed, Contracted or Freelance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>