force-app/main/default/objects/Personal_Questionnaire__c/fields/Annual_Income_from_Pension__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_from_Pension__c</fullName>
    <label>Pension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>