force-app/main/default/objects/Personal_Questionnaire__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Personal Questionnaires</relationshipLabel>
    <relationshipName>Personal_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>