force-app/main/default/objects/Personal_Questionnaire__c/fields/Chk_to_PL__c.field-meta.xml
<CustomField>
    <fullName>Chk_to_PL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chk to PL</label>
    <type>Checkbox</type>
</CustomField>