force-app/main/default/objects/Personal_Questionnaire__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupation</fullName>
            </value>
            <value>
                <fullName>Archivist</fullName>
            </value>
            <value>
                <fullName>Auto Mechanic</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Bookkeeper / Accounting Clerk</fullName>
            </value>
            <value>
                <fullName>Butcher / Meat Cutter</fullName>
            </value>
            <value>
                <fullName>Call Center Operator</fullName>
            </value>
            <value>
                <fullName>Carpenter</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Chemical Engineer</fullName>
            </value>
            <value>
                <fullName>Cleaners (Janitor / Cleaner)</fullName>
            </value>
            <value>
                <fullName>Computer Support Specialist</fullName>
            </value>
            <value>
                <fullName>Construction Worker</fullName>
            </value>
            <value>
                <fullName>Cook / Chef</fullName>
            </value>
            <value>
                <fullName>Customer Service Representative</fullName>
            </value>
            <value>
                <fullName>Data Analyst</fullName>
            </value>
            <value>
                <fullName>Data Entry Clerk</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Designer (Interior Designer)</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Fast‑Food / Counter Worker</fullName>
            </value>
            <value>
                <fullName>Fitness Trainer</fullName>
            </value>
            <value>
                <fullName>Graphic Designer</fullName>
            </value>
            <value>
                <fullName>Heavy &amp; Tractor‑Trailer Truck Driver</fullName>
            </value>
            <value>
                <fullName>Heavy Equipment Operator</fullName>
            </value>
            <value>
                <fullName>HVAC Technician</fullName>
            </value>
            <value>
                <fullName>Interpreter / Translator</fullName>
            </value>
            <value>
                <fullName>Laborer / Freight, Stock, Material Mover</fullName>
            </value>
            <value>
                <fullName>Lawyer (Legal Professional)</fullName>
            </value>
            <value>
                <fullName>Maid / Housekeeping Cleaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>