force-app/main/default/objects/Personal_Questionnaire__c/fields/Receive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receive_Amount__c</fullName>
    <label>Receive Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>