force-app/main/default/objects/Personal_Questionnaire__c/fields/Secondary_Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Income_Source__c</fullName>
    <label>Secondary Income Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Of_Income</valueSetName>
    </valueSet>
</CustomField>